DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Category__c.field-meta.xml
<CustomField>
    <fullName>amc__Category__c</fullName>
    <inlineHelpText>Identifies the Category this Requirement relates to</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>