DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Delivery_Status__c</fullName>
    <inlineHelpText>Identifies the delivery status of the Requirement based on the status of the Action related to this record</inlineHelpText>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>