DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Pain_Point_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Pain_Point_Notes__c</fullName>
    <inlineHelpText>Detailed notes on the current pain point that is driving this Requirement</inlineHelpText>
    <label>Pain Point Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>