DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Program__c.field-meta.xml
<CustomField>
    <fullName>amc__Program__c</fullName>
    <inlineHelpText>Links to the Program this Requirement relates to</inlineHelpText>
    <label>Program</label>
    <referenceTo>amc__Program__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>