DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Project__c.field-meta.xml
<CustomField>
    <fullName>amc__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Project this Requirement is assigned to</inlineHelpText>
    <label>Project</label>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>