DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Project_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Sort_Order__c</fullName>
    <description>Identifies the order that the Requirement should appear on the Program Planner</description>
    <inlineHelpText>Identifies the order that the Requirement should appear on the Program Planner</inlineHelpText>
    <label>Project Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>