DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Recommendations__c.field-meta.xml
<CustomField>
    <fullName>amc__Recommendations__c</fullName>
    <inlineHelpText>Detailed notes on the recommended solution</inlineHelpText>
    <label>Recommendations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>