DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Required_By__c.field-meta.xml
<CustomField>
    <fullName>amc__Required_By__c</fullName>
    <inlineHelpText>Identifies the date this Requirement needs to be delivered by</inlineHelpText>
    <label>Required By</label>
    <type>Date</type>
</CustomField>