DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Requirement_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Requirement_Name__c</fullName>
    <inlineHelpText>Identifies the name of the Requirement</inlineHelpText>
    <label>Requirement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>