DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Requirement_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Requirement_Notes__c</fullName>
    <inlineHelpText>Detailed notes on the Requirement</inlineHelpText>
    <label>Requirement Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>