DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Total_Effort__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Effort__c</fullName>
    <inlineHelpText>Summarises the effort across all related User Stories</inlineHelpText>
    <label>Total Effort</label>
    <summarizedField>amc__User_Story__c.amc__Effort__c</summarizedField>
    <summaryForeignKey>amc__User_Story__c.amc__Requirement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>