DigicielFull/force-app/main/default/objects/amc__Requirement__c/fields/amc__Total_User_Stories__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_User_Stories__c</fullName>
    <inlineHelpText>Identifies how many User Stories are related to this Requirement</inlineHelpText>
    <label>Total User Stories</label>
    <summaryForeignKey>amc__User_Story__c.amc__Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>